<resources>
    <string name="app_name">smime4android</string>

    <string name="intent_decrypt_file">Datei entschlüsseln mit smime4android</string>
    <string name="intent_add_cert">Zertifikat zu smime4android hinzufügen</string>
    <string name="certificates_overview">Loaded certificates with private keys:</string>
    <string name="certificates_install">Add new certificates</string>
    <string name="certificates_emptylist">No certificates/keys installed</string>
    <string name="menu_certificates">Certificates</string>
    <string name="menu_about">About</string>
    <string name="menu_keystore">Create/Load Keystore</string>
    <string name="menu_keystore_destroy">Destroy Keystore</string>
    <string name="menu_context_rename">Rename</string>
    <string name="menu_context_details">Details</string>
    <string name="menu_context_root">Root Certificates</string>
    <string name="menu_context_plain">Plain text</string>
    <string name="menu_context_delete">Delete</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_delete_item_title">Confirmation</string>
    <string name="dialog_delete_item_text">Do you really want to remove this certificate and its root certificates?</string>
    <string name="dialog_keystore_alias">Enter Keystore alias</string>
    <string name="dialog_keystore_filename">Keystore file name</string>
    <string name="dialog_keystore_password">Keystore password</string>
    <string name="dialog_pkcs12_password">PKCS12 password</string>
    <string name="dialog_privatekey_password">private key password</string>
    <string name="dialog_error_message">Error.</string>
    <string name="dialog_error_pem">Error opening PEM</string>
    <string name="dialog_error_pem_noencrypt_message">"Encrypted PEM is not supported yet."</string>
    <string name="dialog_error_pem_missingpw_message">"Missing password for encrypted key in pem file."</string>

    <string name="about_header">About</string>
    <string name="about_content">blabla</string>
    <string name="mailtext"></string>
    <string name="action_settings">Settings</string>
    <string name="mailview_label">Mail</string>
    <string name="mailview_from">From:</string>
    <string name="mailview_from_text">empty</string>
    <string name="mailview_to">Decrypted mail content:</string>
    <string name="mailview_to_text">empty</string>
    <string name="mailview_subject">Subject:</string>
    <string name="mailview_subject_text">empty</string>
    <string name="mailview_mailcontent">Hello World!</string>
    <string name="title_activity_main">S/MIME 4 Android</string>
    <string name="title_activity_preferences">PreferencesActivity</string>

    <string name="certview_startDate">Start Date:</string>
    <string name="certview_endDate">Final Date:</string>
    <string name="certview_country">Country:</string>
    <string name="certview_org">Organization:</string>
    <string name="certview_orgunit">Org. Unit:</string>
    <string name="certview_email">E-Mail:</string>
    <string name="certview_startDate_text">unknown</string>
    <string name="certview_endDate_text">unknown</string>
    <string name="certview_country_text">unknown</string>
    <string name="certview_org_text">unknown</string>
    <string name="certview_orgunit_text">unknown</string>
    <string name="certview_email_text">unknown</string>
    <string name="certview_plaintext">unknown</string>


    <string name="ks_filename">keystore.p12</string>
    <string name="ks_type">PKCS12</string>
    <string name="ks_provider">BC</string>
    <string name="title_activity_certificate">Keystore</string>
    <string name="title_activity_about_activity">About</string>
    <string name="certificate_listview_item_text">Example Certificate</string>
    <string name="certificate_listview_item_button">Add Certificates</string>
    <string name="title_activity_certificate_viewer">CertificateViewerActivity</string>
</resources>
