<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tud.inf.smime4android.activities.CertificateViewerActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/certview_startDate"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/certview_startDate"
                    android:textColor="#ff000000" />

                <TextView
                    android:id="@+id/certview_startDate_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/certview_startDate_text"
                    android:textIsSelectable="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/certview_endDate"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/certview_endDate"
                    android:textColor="#ff000000" />


                <TextView
                    android:id="@+id/certview_endDate_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/certview_endDate_text"
                    android:textIsSelectable="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/certview_country"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/certview_country"
                    android:textColor="#ff000000" />

                <TextView
                    android:id="@+id/certview_country_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/certview_country_text"
                    android:textIsSelectable="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/certview_org"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/certview_org"
                    android:textColor="#ff000000" />

                <TextView
                    android:id="@+id/certview_org_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/certview_org_text"
                    android:textIsSelectable="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/certview_orgunit"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/certview_orgunit"
                    android:textColor="#ff000000" />

                <TextView
                    android:id="@+id/certview_orgunit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/certview_orgunit_text"
                    android:textIsSelectable="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/certview_email"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/certview_email"
                    android:textColor="#ff000000" />

                <TextView
                    android:id="@+id/certview_email_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/certview_email_text"
                    android:textIsSelectable="true" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/certview_plaintext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/certview_plaintext"
                    android:textIsSelectable="true" />

            </ScrollView>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
